# Sonic-Soul

./: .coderabbit.yaml  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  PSYCHE_DEVELOPMENT_GUIDE.md  PSYCHE_ULTIMATE_MASTERPLAN.md  README.md  SECURITY.md  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  scratch.py
.agents/: rules.md
.agents/skills/data-pipeline/: SKILL.md
.agents/skills/ml-experiment/: SKILL.md
.agents/skills/psyche-conventions/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_agent.md
.github/workflows/: ci.yml  release.yml
configs/: config.yaml
data/migrations/: 01_initial_schema.sql
docker/: Dockerfile  docker-compose.yml
psyche-api/: __init__.py  main.py
psyche-api/tests/: test_main.py
psyche-bench/psyche_bench/: __init__.py  cli.py
psyche-core/psyche/: __init__.py  baselines.py  config.py  gsd_taskboard.py  orchestrator.py  registry.py
psyche-core/psyche/agents/: __init__.py  base.py  coherence.py  cold_start.py  context_fusion.py  esie.py  explainability.py  fairness_rl.py  integrity.py  intent_classifier.py  micro_event.py  rumination_guard.py  sea.py  serendipity.py  temporal_taste.py
psyche-core/psyche/db/: __init__.py  cache.py  database.py  migrations.py  supabase_client.py
psyche-core/psyche/environments/: fairness_env.py
psyche-core/psyche/models/: __init__.py  context.py  listener_state.py  sonic_genome.py  track.py
psyche-core/psyche/pipelines/: __init__.py  embedding_index.py  embeddings.py  feature_extraction.py  fma_ingestion.py
psyche-core/psyche/utils/: __init__.py  audio.py  metrics.py
psyche-core/tests/integration/: test_orchestrator.py
psyche-core/tests/unit/: test_base_agent.py  test_baselines.py  test_cold_start.py  test_context_fusion.py  test_esie.py  test_fairness_env.py  test_integrity.py  test_metrics.py  test_micro_event.py  test_models.py  test_sea.py  test_supabase_client.py  test_temporal_taste.py
psyche-plugins/vscode-psyche/: package.json
scripts/: download_fma.py  download_fma.sh  run_pipeline.py  train_fairness_ppo.py
